<resources>
    <string name="app_name">Sensors</string>
    <string name="sensor_data">Sensor data</string>
    <string name="home">Home</string>
    <string name="accelero">Accelero</string>
    <string name="accelero_meter_sensor_data">Accelero Meter Sensor Data</string>
    <string name="proximity">Proximity</string>
    <string name="proximity_sensor_data">Proximity Sensor Data</string>
    <string name="light">Light</string>
    <string name="light_sensor_data">Light Sensor Data</string>
</resources>